--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,40 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.button {
+  background-color: green;
   color: white;
+  font: inherit;
+  border: 1px solid blue;
+  padding: 8px;
+  cursor: pointer;
+}
+button:hover {
+   background-color: lightgreen;
+   color: black;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
+/*.App-logo {*/
+/*  animation: App-logo-spin infinite 20s linear;*/
+/*  height: 80px;*/
+/*}*/
 
-.App-intro {
-  font-size: large;
-}
+/*.App-header {*/
+/*  background-color: #222;*/
+/*  height: 150px;*/
+/*  padding: 20px;*/
+/*  color: white;*/
+/*}*/
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+/*.App-title {*/
+/*  font-size: 1.5em;*/
+/*}*/
+
+/*.App-intro {*/
+/*  font-size: large;*/
+/*}*/
+
+/*@keyframes App-logo-spin {*/
+/*  from { transform: rotate(0deg); }*/
+/*  to { transform: rotate(360deg); }*/
+/*}*/
