--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
 }
-.button {
+.App button {
   background-color: green;
   color: white;
   font: inherit;
@@ -9,9 +9,21 @@
   padding: 8px;
   cursor: pointer;
 }
-button:hover {
+.App button:hover {
    background-color: lightgreen;
    color: black;
+}
+.red {
+    color: red;
+}
+.bold {
+    font-weight: bold;
+}
+.App button.Red {
+    background-color: red;
+}
+.App button.Red:hover {
+    background-color: salmon;
 }
 
 /*.App-logo {*/
